# life-os

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/app/: _db_dedup.py  _db_deletion.py  _db_schema.py  _db_utils.py  _llm_utils.py  agent_planning.py  agent_response.py  auth.py  briefing.py  config.py  db.py  deletion.py  extraction.py  extraction_candidates.py  followup.py  integrations.py  langextract_extraction.py  llm_extraction.py  main.py  memory.py  plotting.py  postprocess.py  schemas.py  telegram.py  workflow.py
backend/app/static/: index.html  main.js  styles.css
docs/: DEPLOYMENT.md  EXAMPLES.md  TELEGRAM_VOICE_NOTES_PLAN.md
scripts/: set_telegram_webhook.py  start_ngrok.py
tests/: __init__.py  test_agent_api.py  test_agent_planning.py  test_auth.py  test_briefing.py  test_extraction.py  test_integrations.py  test_llm_extraction.py  test_memory.py  test_plotting.py  test_storage.py  test_telegram.py  test_workflow.py
