[project]
name = "life-os"
version = "0.1.0"
description = "Local-first personal logging and briefing system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100

