[project]
name = "life-os"
version = "0.1.0"
description = "Local-first personal logging and briefing system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
    "libsql>=0.1.11",
    "langextract[openai]>=1.2.1",
    "langgraph>=1.0.0",
]

[project.optional-dependencies]
dev = [
]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["data*", "tests*"]
