[project]
name = "life-os"
version = "0.1.0"
description = "Local-first personal logging and briefing system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "plotly>=6.1.1",
    "kaleido>=1",
    "libsql>=0.1.11",
    "langextract[openai]>=1.2.1",
    "langgraph>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["data*", "tests*"]
